# AnatomyAtomic

./: .gitignore  01.py  README.md  alembic.ini  docker-compose.yml  dockerfile  githubtest.py  pyproject.toml
DevTools/: docker-compose.yml
anatomic/: __main__.py  app.py  settings.py  sql_tables.py  tools.py
anatomic/Backend/: __init__.py
anatomic/Backend/Section/: api.py  model.py  service.py
anatomic/Backend/SubSection/: api.py  model.py  service.py
anatomic/Backend/Topic/: api.py  model.py  service.py
anatomic/Backend/TopicContent/: api.py  model.py  service.py
anatomic/Backend/User/: api.py  model.py  service.py
anatomic/Database/: database.py  s3storage.py
anatomic/Repository/: base.py  section_repository.py  subsection_repository.py  topic_content_repository.py  topic_repository.py  user_repository.py
anatomic/Test/: 01.py  02.py  03.py
anatomic/migrations/: env.py
anatomic/migrations/versions/: 04b522119698_.py  1640302c7211_.py  1f510de8c9b0_.py  2c8b705957f4_.py  6e394b6180e5_.py  821445751957_.py  a4d2c0b9cbaa_.py  b43784ebd1ba_.py  bb60d3356e95_.py  bf2154cc1b52_.py  fa671506378d_.py
